# visor-rust-sdk

./: .gitignore  CLAUDE.md  Cargo.toml
.githooks/: pre-commit
docs/: cleanup-notes.md
docs/api/: filter-facets.md  filter-listings.md  get-a-dealer.md  get-a-listing.md  list-dealer-inventory.md  look-up-a-vin.md  pricing.md  search-dealers.md  summarize-usage.md
docs/design/: phase-3-5-listings-filter-contract.md  phase-3-6-facets-contract.md  visor-rust-impl.md
scripts/: check-contracts  check-contracts.ps1
src/: error.rs  lib.rs
src/client/: async_client.rs  mod.rs  sync_client.rs
src/models/: base.rs  common.rs  dealers.rs  facets.rs  filter_types.rs  listings.rs  mod.rs  usage.rs  vins.rs
src/pagination/: async_pagination.rs  mod.rs  sync_pagination.rs
src/transport/: async_transport.rs  mod.rs  sync_transport.rs
tests/: test_client.rs  test_errors.rs  test_filters.rs  test_phase5.rs  test_phase6.rs  test_phase6_5.rs  test_transport.rs  test_usage.rs
tests/common/: mod.rs
