[package]
name = "visor"
version = "0.1.0"
edition = "2021"

[features]
# Enable contract tests that are written ahead of their implementation phase.
# These tests compile but fail until the relevant phase lands.
# Run with: cargo test --features phase-contracts
phase-contracts = []

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
