[package]
name = "visor"
version = "0.1.0"
edition = "2021"

[lints.rust]
# Declare the custom cfg flag used to opt into phase-contract tests.
# These tests are written ahead of their implementation phase and intentionally
# fail until that phase lands. Using a cfg flag (not a Cargo feature) keeps
# cargo test --all-features clean.
# Run with: RUSTFLAGS='--cfg phase_contracts' cargo test
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(phase_contracts)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
