[package]
name = "visor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
